--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="card">
-        <h3 class="card__title">GitHub Activity
+        <h3 class="card__title">GitHub Activity 2 and 3
         </h3>
         <p class="card__content">By Angela Ramirez </p>
         <div class="card__date">
