branch1 changes commit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </h3>
         <p class="card__content">By Angela Ramirez </p>
         <div class="card__date">
-            September 24, 2024
+            September 24, 2024 11:24 am
         </div>
         <div class="card__arrow">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" height="15" width="15">
