branch2 changes commit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="card">
         <h3 class="card__title">GitHub Activity 2 and 3
         </h3>
-        <p class="card__content">By Angela Ramirez </p>
+        <p class="card__content">By Angela Ramirez, IV F2 </p>
         <div class="card__date">
             September 24, 2024 11:24 am
         </div>
